# kafka_test

./: .gitignore  pyproject.toml
src/: main.py  settings.py  user.json  user_02-09-2024.json
